--- a/components/employee-sidebar.html
+++ b/components/employee-sidebar.html
@@ -2,12 +2,15 @@
 <div class="sidebar">
     <div class="logo">LCMS</div>
     <div class="campus-name">ISU CAUAYAN CAMPUS</div>
+    <div id="user-info" class="user-info">
+        <!-- User info will be populated by auth-utils.js -->
+    </div>
     <a href="../EMPLOYEE_HTML/employee html.html" class="menu-item">EDIT PROFILE</a>
     <a href="../EMPLOYEE_HTML/req leave html.html" class="menu-item">REQUEST LEAVE</a>
     <a href="../EMPLOYEE_HTML/leave balance html.html" class="menu-item">LEAVE BALANCE</a>
     <a href="../EMPLOYEE_HTML/leave status html.html" class="menu-item">LEAVE STATUS</a>
     <a href="../EMPLOYEE_HTML/leave history html.html" class="menu-item">LEAVE HISTORY</a>
-    <a href="../index.html" class="menu-item">LOGOUT</a>
+    <a href="#" class="menu-item logout-btn">LOGOUT</a>
 </div>
 
 <script>
