--- a/components/supervisor-sidebar.html
+++ b/components/supervisor-sidebar.html
@@ -2,6 +2,9 @@
 <div class="sidebar">
     <div class="logo">LCMS</div>
     <div class="campus-name">ISU CAUAYAN CAMPUS</div>
+    <div id="user-info" class="user-info">
+        <!-- User info will be populated by auth-utils.js -->
+    </div>
     <a href="../SUPERVISOR_HTML/Supervisor.html" class="menu-item">DASHBOARD</a>
     <a href="../SUPERVISOR_HTML/Edit_profile.html" class="menu-item">EDIT PROFILE</a>
     <a href="../SUPERVISOR_HTML/Request_leave.html" class="menu-item">REQUEST LEAVE</a>
@@ -11,7 +14,7 @@
     <a href="../SUPERVISOR_HTML/Leaves_request.html" class="menu-item">EMPLOYEE LEAVES REQUEST</a>
     <a href="../SUPERVISOR_HTML/Leaves_approved.html" class="menu-item">EMPLOYEE APPROVED LEAVES</a>
     <div class="menu-separator"></div>
-    <a href="../index.html" class="menu-item">LOGOUT</a>
+    <a href="#" class="menu-item logout-btn">LOGOUT</a>
 </div>
 
 <script>
