--- a/components/hr-sidebar.html
+++ b/components/hr-sidebar.html
@@ -2,12 +2,15 @@
 <div class="sidebar">
     <div class="logo">LCMS</div>
     <div class="campus-name">ISU CAUAYAN CAMPUS</div>
+    <div id="user-info" class="user-info">
+        <!-- User info will be populated by auth-utils.js -->
+    </div>
     <a href="../HR_HTML/HR.html" class="menu-item">DASHBOARD</a>
     <a href="../HR_HTML/Leave_Approval.html" class="menu-item">LEAVE APPROVAL</a>
     <a href="../HR_HTML/Manage_Employee.html" class="menu-item">MANAGE EMPLOYEES</a>
     <a href="../HR_HTML/Track_Employee.html" class="menu-item">TRACK EMPLOYEES</a>
     <a href="../HR_HTML/HR_Reports.html" class="menu-item">REPORTS</a>
-    <a href="../index.html" class="menu-item">LOGOUT</a>
+    <a href="#" class="menu-item logout-btn">LOGOUT</a>
 </div>
 
 <script>
