--- a/components/supervisor-sidebar.html
+++ b/components/supervisor-sidebar.html
@@ -1,7 +1,13 @@
 <!-- Supervisor Sidebar Component -->
 <div class="sidebar">
-    <div class="logo">LCMS</div>
-    <div class="campus-name">ISU CAUAYAN CAMPUS</div>
+<div class="sidebar">
+    <div class="logo">
+        <img src="../img/lcms_isu.png" alt="" style="width: 100%;">
+    </div>
+    <div class="user-info">
+        <div class="user-name" id="sidebar-user-name">Loading...</div>
+        <div class="user-role">Supervisor</div>
+    </div>
     <a href="../SUPERVISOR_HTML/Supervisor.html" class="menu-item">DASHBOARD</a>
     <a href="../SUPERVISOR_HTML/Edit_profile.html" class="menu-item">EDIT PROFILE</a>
     <a href="../SUPERVISOR_HTML/Request_leave.html" class="menu-item">REQUEST LEAVE</a>
@@ -15,6 +21,8 @@
 </div>
 
 <script>
+    // Note: User information is now loaded by sidebar-loader.js
+    
     // Get the current page filename
     const currentPage = window.location.pathname.split('/').pop();
     
