fix ui of employee and edit profile

--- a/CSS/Leave_status.css
+++ b/CSS/Leave_status.css
@@ -10,6 +10,7 @@ body {
             flex: 1;
             padding: 30px;
             display: flex;
+            margin-left: 290px;
             justify-content: center;
             align-items: flex-start;
         }
