--- a/CSS/Leave_history.css
+++ b/CSS/Leave_history.css
@@ -11,6 +11,7 @@ body {
             padding: 30px;
             display: flex;
             justify-content: center;
+            margin-left: 290px;
             align-items: flex-start;
         }
 
