--- a/CSS/sweetalert-custom.css
+++ b/CSS/sweetalert-custom.css
@@ -119,7 +119,7 @@
     border-color: #4CAF50 !important;
 }
 
-.swal2-success .swal2-success-fix {
+/* .swal2-success .swal2-success-fix {
     background-color: #4CAF50 !important;
 }
 
@@ -137,7 +137,7 @@
 
 .swal2-warning .swal2-warning-outline {
     border-color: #ff9800 !important;
-}
+} */
 
 /* Responsive design */
 @media (max-width: 768px) {
